[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "circular-grid-detector"
version = "1.0.0"
description = "High-performance circular grid pattern detection library"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Shubham Agarwal", email = "sragarwal@outlook.in"}
]
maintainers = [
    {name = "Shubham Agarwal", email = "sragarwal@outlook.in"}
]
keywords = [
    "computer-vision",
    "circle-detection", 
    "grid-pattern",
    "calibration",
    "opencv",
    "image-processing",
    "pattern-recognition"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "scipy>=1.7.0",
    "numba>=0.56.0",
]

[project.urls]
Homepage = "https://github.com/crazysa/circular-grid-detector"
Repository = "https://github.com/crazysa/circular-grid-detector"
Documentation = "https://github.com/crazysa/circular-grid-detector/wiki"
"Bug Tracker" = "https://github.com/crazysa/circular-grid-detector/issues"
Changelog = "https://github.com/crazysa/circular-grid-detector/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[tool.setuptools]
packages = ["circular_grid_detector"]

[tool.setuptools.package-data]
circular_grid_detector = ["*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
